added monthly tea section

--- a/Tea-Cozy/index.html
+++ b/Tea-Cozy/index.html
@@ -18,15 +18,37 @@
         <main>
             <div class='background'>
                 <div class='our-mission'>
-                    <div class='black-strip'>
-                        <h2>Our Mission</h2>
-                        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+                    <h2>Our Mission</h2>
+                </div>
+            </div>
+            <div class='monthly-tea'>
+                <h2>Tea of the Month</h2>
+                <h4>Whats Steeping at the Tea Cozy</h4>
+                <div class='pics'>
+                    <div class=images>
+                        <img src='https://content.codecademy.com/courses/freelance-1/unit-4/img-bedford-bizarre.jpg'/>
+                        <p>Bedford Bizarre Tea</p>
                     </div>
-                </div>
-                <div class='tea-of-the-month'>
-                    <h2>Tea of the Month</h2>
-                    <h4>Whats Steeping at the Tea Cozy</h4>
-                </div>
+                    <div class='images'>
+                        <img src='https://content.codecademy.com/courses/freelance-1/unit-4/img-berryblitz.jpg'/>
+                        <p>Fall Berry Blitz Tea</p>
+                    </div>
+                    <div class='images'>
+                        <img src='https://content.codecademy.com/courses/freelance-1/unit-4/img-donut.jpg'/>
+                        <p>Seasonal Donuts</p>
+                    </div>
+                    <div class='images'>
+                        <img src='https://content.codecademy.com/courses/freelance-1/unit-4/img-myrtle-ave.jpg'/>
+                        <p>Myrtle Ave Tea</p>
+                    </div>
+                    <div class='images'>
+                        <img src='https://content.codecademy.com/courses/freelance-1/unit-4/img-spiced-rum.jpg'/>
+                        <p>Spiced Rum Tea</p>
+                    </div>
+                </div>'
+            </div>
+            <div class='locations'>
+                
             </div>
         </main>
     </body>
