--- a/Tea-Cozy/index.html
+++ b/Tea-Cozy/index.html
@@ -10,18 +10,18 @@
                 <img src='https://content.codecademy.com/courses/freelance-1/unit-4/img-tea-cozy-logo.png'/>
             </div>
             <div class='nav'>
-                <p><a href=''>Mission</a></p>
-                <p><a href=''>Featured Tea</a></p>
-                <p><a href=''>Locations</a></p> 
+                <p><a href='#background'>Mission</a></p>
+                <p><a href='#monthly-tea'>Featured Tea</a></p>
+                <p><a href='#locations'>Locations</a></p> 
             </div>
         </header>
         <main>
-            <div class='background'>
+            <div class='background' id='background'>
                 <div class='our-mission'>
                     <h2>Our Mission</h2>
                 </div>
             </div>
-            <div class='monthly-tea'>
+            <div class='monthly-tea' id='monthly-tea'>
                 <h2>Tea of the Month</h2>
                 <h4>Whats Steeping at the Tea Cozy</h4>
                 <div class='pics'>
@@ -47,9 +47,39 @@
                     </div>
                 </div>'
             </div>
-            <div class='locations'>
-                
+            <div class='locations' id='locations'>
+                <h2>Locations</h2>
+                <div class='location-bin'>
+                    <div class='location'>
+                        <h3>Downtown</h3>
+                        <p>384 W 4th Street</p>
+                        <p>Suite 108</p>
+                        <p>Portland, Maine</p>
+                    </div>
+                    <div class='location'>
+                        <h3>East Bayside</h3>
+                        <p>3433 Phisherman's Avenue</p>
+                        <p>(Northwest Corner)</p>
+                        <p>Portland, Maine</p>
+                    </div>
+                    <div class='location' id='location-1'>
+                        <h3>Oakdale</h3>
+                        <p>515 Crescent Avenue</p>
+                        <p>Second Floor</p>
+                        <p>Portland, Maine</p>
+                    </div> 
+                </div>
             </div>
         </main>
+        <footer>
+            <div class='contacts'>
+            <h2>The Tea Cozy</h2>
+            <h5>contact@theteacozy.com</h5>
+            <p>917-555-8904</p>
+            </div>
+            <div class ='copyright'>
+               &copy; The Tea Cozy 2017 
+            </div>
+        </footer>
     </body>
 </html>
